--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-web": "~0.11.7",
     "vue-native-core": "^0.1.4",
     "vue-native-helper": "^0.1.4",
-    "vue-native-scripts": "^0.1.4"
+    "vue-native-scripts": "^0.1.4",
+    "firebase": "7.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
